--- a/scss/themes/dark/_variables.scss
+++ b/scss/themes/dark/_variables.scss
@@ -350,8 +350,11 @@ $form-multi-select-focus-color-dt:         $input-focus-color-dt !default;
 $form-multi-select-focus-bg-dt:            $input-focus-bg-dt !default;
 $form-multi-select-focus-border-color-dt:  $input-focus-border-color-dt !default;
 
-$form-multi-select-disabled-color-dt:      $disabled-dt !default;
-$form-multi-select-disabled-bg-dt:         $input-disabled-bg-dt !default;
+$form-multi-select-placeholder-color-dt:   $medium-emphasis-dt !default;
+
+$form-multi-select-disabled-color-dt:         $disabled-dt !default;
+$form-multi-select-disabled-bg-dt:            $input-disabled-bg-dt !default;
+$form-multi-select-disabled-border-color-dt:  $input-border-color-dt !default;
 
 $form-multi-select-tag-bg-dt:               $light-dt !default;
 $form-multi-select-tag-border-color-dt:     $input-border-color-dt !default;
@@ -406,9 +409,11 @@ $form-multi-select-theme-map: (
   "form-multi-select-border-color":             $form-multi-select-border-color-dt,
   "form-multi-select-disabled-color":           $form-multi-select-disabled-color-dt,
   "form-multi-select-disabled-bg":              $form-multi-select-disabled-bg-dt,
+  "form-multi-select-disabled-border-color":    $form-multi-select-disabled-border-color-dt,
   "form-multi-select-focus-color":              $form-multi-select-focus-color-dt,
   "form-multi-select-focus-bg":                 $form-multi-select-focus-bg-dt,
   "form-multi-select-focus-border-color":       $form-multi-select-focus-border-color-dt,
+  "form-multi-select-placeholder-color":        $form-multi-select-placeholder-color-dt,
   "form-multi-select-tag-bg":                   $form-multi-select-tag-bg-dt,
   "form-multi-select-tag-border-color":         $form-multi-select-tag-border-color-dt,
   "form-multi-select-tag-delete-bg":            $form-multi-select-tag-delete-bg-dt,
@@ -841,10 +846,12 @@ $date-picker-focus-bg-dt:                 $input-focus-bg-dt !default;
 $date-picker-focus-border-color-dt:       $input-focus-border-color-dt !default;
 $date-picker-disabled-color-dt:           $disabled-dt !default;
 $date-picker-disabled-bg-dt:              $input-disabled-bg-dt !default;
+$date-picker-disabled-border-color-dt:    $input-border-color-dt !default;
+$date-picker-placeholder-color-dt:        $medium-emphasis-dt !default;
 $date-picker-cleaner-icon-color-dt:       $medium-emphasis-dt !default;
 $date-picker-cleaner-icon-dt:             url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$date-picker-cleaner-icon-color-dt}' points='306.912 214.461 256 265.373 205.088 214.461 182.461 237.088 233.373 288 182.461 338.912 205.088 361.539 256 310.627 306.912 361.539 329.539 338.912 278.627 288 329.539 237.088 306.912 214.461'></polygon><path fill='#{$date-picker-cleaner-icon-color-dt}' d='M472,96H384V40H352V96H160V40H128V96H40a24.028,24.028,0,0,0-24,24V456a24.028,24.028,0,0,0,24,24H472a24.028,24.028,0,0,0,24-24V120A24.028,24.028,0,0,0,472,96Zm-8,352H48V128h80v40h32V128H352v40h32V128h80Z'></path></svg>") !default;
 $date-picker-cleaner-icon-hover-color-dt: $high-emphasis-dt !default;
-$date-picker-cleaner-icon-hover-dt:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$date-picker-cleaner-icon-hover-color-dt}' points='306.912 214.461 256 265.373 205.088 214.461 182.461 237.088 233.373 288 182.461 338.912 205.088 361.539 256 310.627 306.912 361.539 329.539 338.912 278.627 288 329.539 237.088 306.912 214.461'></polygon><path fill='#{$date-picker-cleaner-icon-hover-color-dt})' d='M472,96H384V40H352V96H160V40H128V96H40a24.028,24.028,0,0,0-24,24V456a24.028,24.028,0,0,0,24,24H472a24.028,24.028,0,0,0,24-24V120A24.028,24.028,0,0,0,472,96Zm-8,352H48V128h80v40h32V128H352v40h32V128h80Z'></path></svg>") !default;
+$date-picker-cleaner-icon-hover-dt:       url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$date-picker-cleaner-icon-hover-color-dt}' points='306.912 214.461 256 265.373 205.088 214.461 182.461 237.088 233.373 288 182.461 338.912 205.088 361.539 256 310.627 306.912 361.539 329.539 338.912 278.627 288 329.539 237.088 306.912 214.461'></polygon><path fill='#{$date-picker-cleaner-icon-hover-color-dt}' d='M472,96H384V40H352V96H160V40H128V96H40a24.028,24.028,0,0,0-24,24V456a24.028,24.028,0,0,0,24,24H472a24.028,24.028,0,0,0,24-24V120A24.028,24.028,0,0,0,472,96Zm-8,352H48V128h80v40h32V128H352v40h32V128h80Z'></path></svg>") !default;
 $date-picker-indicator-icon-color-dt:     $medium-emphasis-dt !default;
 $date-picker-indicator-icon-dt:           url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><path fill='#{$date-picker-indicator-icon-color-dt}' d='M472,96H384V40H352V96H160V40H128V96H40a24.028,24.028,0,0,0-24,24V456a24.028,24.028,0,0,0,24,24H472a24.028,24.028,0,0,0,24-24V120A24.028,24.028,0,0,0,472,96Zm-8,352H48V128h80v40h32V128H352v40h32V128h80Z'></path><rect width='32' height='32' x='112' y='224' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='200' y='224' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='280' y='224' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='368' y='224' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='112' y='296' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='200' y='296' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='280' y='296' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='368' y='296' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='112' y='368' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='200' y='368' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='280' y='368' fill='#{$date-picker-indicator-icon-color-dt}'></rect><rect width='32' height='32' x='368' y='368' fill='#{$date-picker-indicator-icon-color-dt}'></rect></svg>") !default;
 $date-picker-separator-icon-color-dt:     $medium-emphasis-dt !default;
@@ -863,9 +870,11 @@ $date-picker-theme-map: (
   "date-picker-border-color":             $date-picker-border-color-dt,
   "date-picker-disabled-color":           $date-picker-disabled-color-dt,
   "date-picker-disabled-bg":              $date-picker-disabled-bg-dt,
+  "date-picker-disabled-border-color":    $date-picker-disabled-border-color-dt,
   "date-picker-focus-color":              $date-picker-focus-color-dt,
   "date-picker-focus-bg":                 $date-picker-focus-bg-dt,
   "date-picker-focus-border-color":       $date-picker-focus-border-color-dt,
+  "date-picker-placeholder-color":        $date-picker-placeholder-color-dt,
   "date-picker-cleaner-icon":             $date-picker-cleaner-icon-dt,
   "date-picker-cleaner-icon-hover":       $date-picker-cleaner-icon-hover-dt,
   "date-picker-indicator-icon":           $date-picker-indicator-icon-dt,
@@ -887,6 +896,8 @@ $time-picker-focus-bg-dt:                      $input-focus-bg-dt !default;
 $time-picker-focus-border-color-dt:            $input-focus-border-color-dt !default;
 $time-picker-disabled-color-dt:                $disabled-dt !default;
 $time-picker-disabled-bg-dt:                   $input-disabled-bg-dt !default;
+$time-picker-disabled-border-color-dt:         $input-border-color-dt !default;
+$time-picker-placeholder-color-dt:             $medium-emphasis-dt !default;
 $time-picker-cleaner-icon-color-dt:            $medium-emphasis-dt !default;
 $time-picker-cleaner-icon-dt:                  url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512' role='img'><polygon fill='#{$time-picker-cleaner-icon-color-dt}' points='348.071 141.302 260.308 229.065 172.545 141.302 149.917 163.929 237.681 251.692 149.917 339.456 172.545 362.083 260.308 274.32 348.071 362.083 370.699 339.456 282.935 251.692 370.699 163.929 348.071 141.302' class='ci-primary'></polygon><path fill='#{$time-picker-cleaner-icon-color-dt}' d='M425.706,86.294A240,240,0,0,0,86.294,425.706,240,240,0,0,0,425.706,86.294ZM256,464C141.309,464,48,370.691,48,256S141.309,48,256,48s208,93.309,208,208S370.691,464,256,464Z' class='ci-primary'></path></svg>") !default;
 $time-picker-cleaner-icon-hover-color-dt:      $high-emphasis-dt !default;
@@ -907,9 +918,11 @@ $time-picker-theme-map: (
   "time-picker-border-color":                  $time-picker-border-color-dt,
   "time-picker-disabled-color":                $time-picker-disabled-color-dt,
   "time-picker-disabled-bg":                   $time-picker-disabled-bg-dt,
+  "time-picker-disabled-border-color":         $time-picker-disabled-border-color-dt,
   "time-picker-focus-color":                   $time-picker-focus-color-dt,
   "time-picker-focus-bg":                      $time-picker-focus-bg-dt,
   "time-picker-focus-border-color":            $time-picker-focus-border-color-dt,
+  "time-picker-placeholder-color":             $time-picker-placeholder-color-dt,
   "time-picker-cleaner-icon":                  $time-picker-cleaner-icon-dt,
   "time-picker-cleaner-icon-hover":            $time-picker-cleaner-icon-hover-dt,
   "time-picker-indicator-icon":                $time-picker-indicator-icon-dt,
