--- a/scss/mixins/_color-mode.scss
+++ b/scss/mixins/_color-mode.scss
@@ -13,6 +13,7 @@
       }
     }
   } @else {
+    .#{$mode}-theme, // TODO: remove in v5
     [data-coreui-theme="#{$mode}"] {
       @content;
     }
