--- a/scss/utilities/_bg-gradients.scss
+++ b/scss/utilities/_bg-gradients.scss
@@ -1,5 +1,6 @@
 @each $color, $value in $theme-gradients {
   .bg-#{$color}-gradient {
-    @include gradient($color, $value);
+    background-color: var(--#{$prefix}#{$color});
+    background-image: linear-gradient(45deg, var(--#{$prefix}#{$color}-start) 0%, var(--#{$prefix}#{$color}-stop) 100%);
   }
 }
