--- a/scss/_date-picker.scss
+++ b/scss/_date-picker.scss
@@ -278,3 +278,11 @@
     }
   }
 }
+
+@if $enable-dark-mode and $enable-elevations {
+  @include color-mode(dark) {
+    .date-picker-dropdown {
+      background-color: color-mix(in srgb, var(--#{$prefix}date-picker-dropdown-bg) 96%, #fff);
+    }
+  }
+}
