--- a/scss/_dropdown.scss
+++ b/scss/_dropdown.scss
@@ -249,3 +249,11 @@
   --#{$prefix}dropdown-header-color: #{$dropdown-dark-header-color};
   // scss-docs-end dropdown-dark-css-vars
 }
+
+@if $enable-dark-mode and $enable-elevations {
+  @include color-mode(dark) {
+    .dropdown-menu {
+      background-color: color-mix(in srgb, var(--#{$prefix}dropdown-bg) 96%, #fff);
+    }
+  }
+}
