--- a/scss/mixins/_banner.scss
+++ b/scss/mixins/_banner.scss
@@ -1,7 +1,7 @@
 @mixin bsBanner($file) {
   /*!
-   * CoreUI #{$file} v4.3.0-alpha.0 (https://coreui.io)
+   * CoreUI PRO #{$file} v4.6.0-alpha.0 (https://coreui.io)
    * Copyright (c) 2023 creativeLabs Łukasz Holeczek
-   * Licensed under MIT (https://github.com/coreui/coreui/blob/main/LICENSE)
+   * License (https://coreui.io/pro/license/)
    */
 }
